2014-01-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16506]
	* nss/nss_files/files-netgrp.c (_nss_files_setnetgrent): Avoid
	access beyond array bounds when parsing netgroups file.

	* nscd/netgroupcache.c (addgetnetgrentX): Compute offset from
	the old buffer before realloc.

2014-01-27  Allan McRae  <allan@archlinux.org>

	* po/fr.po: Update French translation from translation project.

2014-01-26  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/libm-test-ulps: Regenerate.

2014-01-24  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Regenerate.

2014-01-25  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/sh4/fpu/libm-test-ulps: Move to ...
	* sysdeps/sh/libm-test-ulps: ... here and regenerated.

2013-01-24  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16474]
	* nscd/netgroupcache.c (addgetnetgrentX): Adjust triplet
	string pointers after reallocation.

2014-01-24  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h: Use __SH4__ and
	__SH4A__ instead of __SH_FPU_ANY__.

2014-01-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/fpu_control.h: New file.
	* sysdeps/sh/sh4/fpu/fpu_control.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h: New file.
	* sysdeps/unix/sysv/linux/sh/sh3/sys/ucontext.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sh3/sys: Remove directory.
	* sysdeps/unix/sysv/linux/sh/sh4/sys/ucontext.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sh4/sys: Remove directory.
	* sysdeps/sh/sys/ucontext.h: Remove.
	* sysdeps/sh/sys: Remove directory.

2014-01-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sys/ucontext.h: Merge into
	s390/sys/ucontext.h.
	* sysdeps/unix/sysv/linux/s390/s390-64/sys/ucontext.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ucontext.h: New file.

2014-01-20  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15605]
	* sysdeps/x86_64/x32/symbol-hacks.h: Include generic symbol-hacks.h.
